# RequirementsGeneratorLLM

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
requirementsgeneratorllm/: app.py  constants.py  prompt_builder.py  prompt_executor.py  requirements_writer.py
